deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: us.icr.io/edx-namespace/account-app:v5 
        ports:
        - containerPort: 9001
        
#mycluster.icp:8500/ibmcom/account             
---

apiVersion: v1
kind: Service
metadata:
  name: account
  labels:
    app: account
    service: account
spec:
  ports:
  - port: 9001
    name: http
  selector:
    app: account
